--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--<link rel="stylesheet" href="./testDesign.css"> -->
     <title>Dragon</title>
+    <style>
+     /* header {
+    color: blue;
+    font-size: small;
+    background-color: brown;
+}*/
+    </style>
 </head>
 <body>
     <header>
@@ -16,7 +24,7 @@
           </nav>
 
     </header>
-    <main>
+    <main style="color: chocolate;">
         <br>
         <table border="">
             <tr>
